--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
     "require-dev": {
         "laminas/laminas-diactoros": "^2.4",
         "php-http/curl-client": "^2.1",
+        "php-http/mock-client": "^1.4",
         "phpunit/phpunit": "^9.5",
         "symfony/var-dumper": "^5.1"
     }
